// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly handle clicks on the button 1`] = `
<div
  className="bubble-popup-helper"
  onClick={[Function]}
  role="tooltip"
  tabIndex={0}
>
  <button
    onClick={[MockFunction]}
  >
    open
  </button>
</div>
`;

exports[`should correctly handle clicks on the button 2`] = `
<div
  className="bubble-popup-helper"
  onClick={[Function]}
  role="tooltip"
  tabIndex={0}
>
  <button
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "currentTarget": Object {
                "blur": [Function],
              },
              "preventDefault": [Function],
              "stopPropagation": [Function],
              "target": Object {
                "blur": [Function],
              },
            },
          ],
        ],
      }
    }
  >
    open
  </button>
  <div>
    <BubblePopup
      popupPosition={
        Object {
          "right": 0,
          "top": 0,
        }
      }
    >
      <span>
        test
      </span>
    </BubblePopup>
  </div>
</div>
`;

exports[`should render an open popup on the left 1`] = `
<BubblePopup
  popupPosition={
    Object {
      "left": 2,
      "top": 0,
    }
  }
>
  <div
    className="bubble-popup"
    style={Object {}}
  >
    <span>
      test
    </span>
    <div
      className="bubble-popup-arrow"
    />
  </div>
</BubblePopup>
`;

exports[`should render an open popup on the right 1`] = `
<div
  className="bubble-popup-helper"
  onClick={[Function]}
  role="tooltip"
  tabIndex={0}
>
  <button
    onClick={[MockFunction]}
  >
    open
  </button>
  <div>
    <BubblePopup
      popupPosition={
        Object {
          "right": 0,
          "top": 0,
        }
      }
    >
      <span>
        test
      </span>
    </BubblePopup>
  </div>
</div>
`;

exports[`should render the popup helper with a closed popup 1`] = `
<div
  className="bubble-popup-helper"
  onClick={[Function]}
  role="tooltip"
  tabIndex={0}
>
  <button
    onClick={[MockFunction]}
  >
    open
  </button>
</div>
`;

exports[`should render the popup with offset 1`] = `
<BubblePopup
  popupPosition={
    Object {
      "right": 2,
      "top": 5,
    }
  }
>
  <div
    className="bubble-popup"
    style={Object {}}
  >
    <span>
      test
    </span>
    <div
      className="bubble-popup-arrow"
    />
  </div>
</BubblePopup>
`;

exports[`should render with custom classes 1`] = `
<div
  className="bubble-popup-helper"
  onClick={[Function]}
  role="tooltip"
  tabIndex={0}
>
  <button
    onClick={[MockFunction]}
  >
    open
  </button>
  <div>
    <BubblePopup
      customClass="mypopupclass"
      popupPosition={
        Object {
          "right": 0,
          "top": 0,
        }
      }
    >
      <span>
        test
      </span>
    </BubblePopup>
  </div>
</div>
`;
